xml/src2/objects/System_Execptions__c.object
<CustomObject>
    <description>System exceptions caught and logged via Util_Logging.logSystemErrors method.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Exception description given by Util_Logging.logSystemErrors method</description>
        <inlineHelpText>Exception description given by Util_Logging.logSystemErrors method</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <description>The actual exception thrown by the platform and caught by Util_Logging.logSystemErrors method.</description>
        <inlineHelpText>The actual exception thrown by the platform and caught by Util_Logging.logSystemErrors method.</inlineHelpText>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Resolution__c</fullName>
        <description>Used to help debug common issues.</description>
        <inlineHelpText>Used to help debug common issues.</inlineHelpText>
        <label>Reason / Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>The record id that caused the exception.</description>
        <inlineHelpText>The record id that caused the exception.</inlineHelpText>
        <label>Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the exception was resolved this box should be checked.</description>
        <inlineHelpText>If the exception was resolved this box should be checked.</inlineHelpText>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The timestamp the record was created.</description>
        <inlineHelpText>The timestamp the record was created.</inlineHelpText>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>System Execptions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Record_Id__c</columns>
        <columns>Description__c</columns>
        <columns>Exception__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exception-{00000000}</displayFormat>
        <label>System Exception ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Execptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>